# cherry-picker

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml  pytest.ini  readme.rst  tox.ini
.github/: dependabot.yml
.github/workflows/: deploy.yml  lint.yml  lint_python.yml  main.yml
cherry_picker/: __init__.py  __main__.py  cherry_picker.py  test.py  test_cherry_picker.py
