[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "cherry-picker"
readme = "README.md"
maintainers = [{ name = "Python Core Developers", email = "core-workflow@python.org" }]
authors = [{ name = "Mariatta Wijaya", email = "mariatta@python.org" }]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "description",
  "version",
]
dependencies = [
  "cffi>=v1.17.0rc1", # remove once v1.17.0 is out; add 3.13 classifier above (see #127)
  "click>=6",
  "gidgethub",
  "requests",
  'tomli>=1.1; python_version < "3.11"',
]
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]
[project.urls]
"Homepage" = "https://github.com/python/cherry-picker"
[project.scripts]
cherry_picker = "cherry_picker.cherry_picker:cherry_pick_cli"

[tool.hatch.version]
source = "vcs"
# Change regex to match tags like "cherry-picker-v2.2.0".
tag-pattern = '^cherry-picker-(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
